--- a/index.html
+++ b/index.html
@@ -162,6 +162,102 @@
 
   <section class="hero teaser">
     <div class="hero-body">
+      <div class="container">
+        <h2 class="title is-3" style="text-align: center;">Omnidirectional Walking</h2>
+        <div class="columns is-centered">
+          <div class="column is-full-width is-centered has-text-centered">
+            <h3 class="title is-4">Forward and Backward</h3>
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/forward.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="column is-full-width is-centered has-text-centered">
+            <h3 class="title is-4">Turning</h3>
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/turning.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="column is-full-width is-centered has-text-centered">
+            <h3 class="title is-4">Lateral Walking</h3>
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/lateral.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+
+        <h2 class="title is-3" style="text-align: center;">Diverse Terrains</h2>
+        <div class="columns is-centered">
+          <div class="column is-full-width is-centered has-text-centered">
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/terrain1.mp4" type="video/mp4">
+            </video>
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/terrain4.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="column is-full-width is-centered has-text-centered">
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/terrain6.mp4" type="video/mp4">
+            </video>
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/terrain5.mp4" type="video/mp4">
+            </video>
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/terrain7.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="column is-full-width is-centered has-text-centered">
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/terrain3.mp4" type="video/mp4">
+            </video>
+            <video autoplay controls muted loop playsinline width="100%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/terrain2.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+
+        <h2 class="title is-3" style="text-align: center;">10° Slope</h2>
+        <div class="columns is-centered">
+          <div class="column is-full-width is-centered has-text-centered">
+            <h3 class="title is-4">Forward and Backward</h3>
+            <video autoplay controls muted loop playsinline width="70%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/slope1.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="column is-full-width is-centered has-text-centered">
+            <h3 class="title is-4">Lateral Walking</h3>
+            <video autoplay controls muted loop playsinline width="70%"
+              style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+              <source src="./static/videos/slope2.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+
+        <h2 class="title is-3" style="text-align: center;">Push Recovery</h2>
+        <div class="content has-text-centered">
+          <video id="lateral-video" autoplay controls muted loop playsinline width="50%"
+            style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;">
+            <source src="./static/videos/push.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="hero teaser">
+    <div class="hero-body">
       <div class="container is-max-desktop">
         <h2 class="title">BibTeX</h2>
         <pre><code>@article{wang2025booster,
